[tool.poetry]
name = "github-action"
version = "0.1.0"
description = ""
authors = ["Sean Zheng <blackhorseya@gmail.com>"]
readme = "README.md"
packages = [{include = "github_action"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
